--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
         <!-- css -->
         <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
         <link rel="stylesheet" href="css/fullscreen-pages.css" />
-        <link rel="stylesheet" href="css/radio-checkbox-widget.css" />
+        <link rel="stylesheet" href="css/index.css" />
 
     </head>
 
@@ -43,7 +43,7 @@
                 <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" data-clear-btn="true" />
                 <label>Any feelings or symptoms? (optional)</label>
                 <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" data-clear-btn="true" />
-                <i>By pressing submit, this smell report will also be sent to the ACHD Air Quality program. (Unless '1' is selected.) If you wish to receive a reply from them, please go to settings (top right) and provide a response email.</i>
+                <div class="text-justified"><i>By pressing submit, this smell report will also be sent to the ACHD Air Quality program. (Unless '1' is selected.) If you wish to receive a reply from them, please go to settings (top right) and provide a response email.</i></div>
                 <button type="button" id="button_submit_report" disabled>Send Smell Report!</button>
             </div>
 
