--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <div role="main" class="ui-content" data-iscroll>
-                <h3>How does it smell to you right now?</h3>
+                <h3>How does your air smell right now?</h3>
 
                 <fieldset data-role="controlgroup">
                   <input type="radio" name="radio-choice" id="radio-choice-1" value="1" onclick="HomePage.onClickSmell(this)" /><label for="radio-choice-1"><div class="picker-color-smell-1"></div> 1 Just fine!</label>
@@ -81,7 +81,7 @@
 
         <div data-role="page" id="settings" class="page-fullscreened">
             <div data-role="header" data-position="fixed" data-tap-toggle="false">
-                <h1>Settings</h1>
+                <h1>Smell PGH: Settings</h1>
             </div>
 
             <div role="main" class="ui-content">
