--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
                   <input type="radio" name="radio-choice" id="radio-choice-5" value="5" onclick="HomePage.onClickSmell(this)" /><label for="radio-choice-5"><div class="picker-color-smell-5"></div> 5 About as bad as it gets!</label>
                 </fieldset>
 
-                <label>Describe the smell (optional)</label>
+                <label>Describe the smell or source of odor (optional)</label>
                 <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" data-clear-btn="true" />
                 <label>Any feelings or symptoms? (optional)</label>
                 <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" data-clear-btn="true" />
