Forgot to add onload in body

--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 
     </head>
 
-    <body>
+    <body onload="onLoad();">
 
         <div data-role="page" id="home" class="page-fullscreened">
             <div data-role="header" data-position="fixed" data-tap-toggle="false">
