--- a/www/index.html
+++ b/www/index.html
@@ -8,20 +8,32 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- css -->
+        <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+        <link rel="stylesheet" href="css/fullscreen-pages.css" />
+        <link rel="stylesheet" href="css/index.css" />
+        <link rel="stylesheet" href="css/pages/map.css" />
+
         <!-- Libraries -->
         <script src="lib/jquery-1.7.1.min.js"></script>
         <script src="lib/jquery.mobile-1.4.5.min.js"></script>
         <script src="lib/md5.js"></script>
         <script src="lib/fastclick.min.js"></script>
+        <script src="cordova.js"></script>
 
-        <!-- css -->
-        <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
-        <link rel="stylesheet" href="css/fullscreen-pages.css" />
-        <link rel="stylesheet" href="css/index.css" />
+        <!-- app-related scripts -->
+        <script src="js/constants.js"></script>
+        <script src="js/localstorage.js"></script>
+        <script src="js/globalfunctions.js"></script>
+        <script src="js/location.js"></script>
+        <script src="js/pages/startuppage.js"></script>
+        <script src="js/pages/homepage.js"></script>
+        <script src="js/pages/settingspage.js"></script>
+        <script src="js/app.js"></script>
 
     </head>
 
-    <body onload="onLoad();">
+    <body>
 
         <div data-role="page" id="home" class="page-fullscreened">
             <div data-role="header" data-position="fixed" data-tap-toggle="false">
@@ -33,19 +45,22 @@
                 <h3>How does your air smell right now?</h3>
 
                 <fieldset data-role="controlgroup">
-                  <input type="radio" name="radio-choice" id="radio-choice-1" value="1" onclick="HomePage.onClickSmell(this)" /><label for="radio-choice-1"><div class="picker-color-smell-1"></div> 1 Just fine!</label>
-                  <input type="radio" name="radio-choice" id="radio-choice-2" value="2" onclick="HomePage.onClickSmell(this)" /><label for="radio-choice-2"><div class="picker-color-smell-2"></div> 2 Barely noticeable</label>
-                  <input type="radio" name="radio-choice" id="radio-choice-3" value="3" onclick="HomePage.onClickSmell(this)" /><label for="radio-choice-3"><div class="picker-color-smell-3"></div> 3 Definitely noticeable</label>
-                  <input type="radio" name="radio-choice" id="radio-choice-4" value="4" onclick="HomePage.onClickSmell(this)" /><label for="radio-choice-4"><div class="picker-color-smell-4"></div> 4 It's getting pretty bad</label>
-                  <input type="radio" name="radio-choice" id="radio-choice-5" value="5" onclick="HomePage.onClickSmell(this)" /><label for="radio-choice-5"><div class="picker-color-smell-5"></div> 5 About as bad as it gets!</label>
+                  <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-1" value="1" /><label for="radio-choice-1"><div class="picker-color-smell-1"></div> 1 Just fine!</label>
+                  <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-2" value="2" /><label for="radio-choice-2"><div class="picker-color-smell-2"></div> 2 Barely noticeable</label>
+                  <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-3" value="3" /><label for="radio-choice-3"><div class="picker-color-smell-3"></div> 3 Definitely noticeable</label>
+                  <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-4" value="4" /><label for="radio-choice-4"><div class="picker-color-smell-4"></div> 4 It's getting pretty bad</label>
+                  <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-5" value="5" /><label for="radio-choice-5"><div class="picker-color-smell-5"></div> 5 About as bad as it gets!</label>
                 </fieldset>
 
-                <label>Describe the smell or source of odor (optional)</label>
+                <label for="textfield_smell_description">Describe the smell or source of odor (optional)</label>
                 <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" data-clear-btn="true" />
-                <label>Any feelings or symptoms? (optional)</label>
+
+                <label for="textfield_feelings_symptoms">Any feelings or symptoms? (optional)</label>
                 <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" data-clear-btn="true" />
+
                 <div class="text-justified"><i>By pressing submit, this smell report will also be sent to the ACHD Air Quality program. (Unless '1' is selected.) If you wish to receive a reply from them, please go to settings (top right) and provide a response email.</i></div>
-                <button type="button" id="button_submit_report" disabled>Send Smell Report!</button>
+
+                <button type="button" id="button_submit_report" disabled>Send Smell Report</button>
             </div>
 
             <div data-role="footer" data-position="fixed" data-id="home_1" data-tap-toggle="false">
@@ -64,8 +79,8 @@
                 <a href="#settings" data-icon="gear" class="ui-btn-right">Settings</a>
             </div>
 
-            <div role="main" class="ui-content" data-iscroll style="padding:0;margin:0;">
-                <iframe id="iframe-map" src="http://localhost/visualization" style="padding:0; margin:0;  height: 100%; width: 100%;">
+            <div role="main" class="ui-content" id="iframe-map-container" data-iscroll>
+                <iframe id="iframe-map" src="http://localhost/visualization">
                     <p>Your browser does not support iframes.</p>
                 </iframe>
             </div>
@@ -155,20 +170,20 @@
             <div data-role="footer" data-position="fixed" data-id="startup_1" data-tap-toggle="false">
                 <div data-role="navbar">
                     <ul>
-                        <li><a href="#settings" data-icon="carat-r" data-transition="none" onclick="LocalStorage.setIsStartUpDone(true); App.initialize();">Done</a></li>
+                        <li><a href="#settings" id="startup-to-settings" data-icon="carat-r" data-transition="none">Done</a></li>
                     </ul>
                 </div>
             </div>
         </div>
 
-        <script src="cordova.js"></script>
+<!--         <script src="cordova.js"></script>
         <script src="js/constants.js"></script>
         <script src="js/localstorage.js"></script>
         <script src="js/globalfunctions.js"></script>
         <script src="js/location.js"></script>
         <script src="js/pages/homepage.js"></script>
         <script src="js/pages/settingspage.js"></script>
-        <script src="js/app.js"></script>
+        <script src="js/app.js"></script> -->
 
     </body>
 </html>
