--- a/www/index.html
+++ b/www/index.html
@@ -131,11 +131,11 @@
                     <p id="p_slider_info"></p>
 
                     <fieldset data-role="controlgroup" id="checkboxes">
-                        <input type="checkbox" name="checkbox-choice" id="checkbox-choice-1" value="1" onclick="SettingsPage.onCheckboxClick(this)" /><label for="checkbox-choice-1"><div class="picker-color-smell-1"></div> 1 Just fine!</label>
-                        <input type="checkbox" name="checkbox-choice" id="checkbox-choice-2" value="2" onclick="SettingsPage.onCheckboxClick(this)" /><label for="checkbox-choice-2"><div class="picker-color-smell-2"></div> 2 Barely noticeable</label>
-                        <input type="checkbox" name="checkbox-choice" id="checkbox-choice-3" value="3" onclick="SettingsPage.onCheckboxClick(this)" /><label for="checkbox-choice-3"><div class="picker-color-smell-3"></div> 3 Definitely noticeable</label>
-                        <input type="checkbox" name="checkbox-choice" id="checkbox-choice-4" value="4" onclick="SettingsPage.onCheckboxClick(this)" /><label for="checkbox-choice-4"><div class="picker-color-smell-4"></div> 4 It's getting pretty bad</label>
-                        <input type="checkbox" name="checkbox-choice" id="checkbox-choice-5" value="5" onclick="SettingsPage.onCheckboxClick(this)" /><label for="checkbox-choice-5"><div class="picker-color-smell-5"></div> 5 About as bad as it gets!</label>
+                        <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-1" value="1" /><label for="checkbox-choice-1"><div class="picker-color-smell-1"></div> 1 Just fine!</label>
+                        <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-2" value="2" /><label for="checkbox-choice-2"><div class="picker-color-smell-2"></div> 2 Barely noticeable</label>
+                        <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-3" value="3" /><label for="checkbox-choice-3"><div class="picker-color-smell-3"></div> 3 Definitely noticeable</label>
+                        <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-4" value="4" /><label for="checkbox-choice-4"><div class="picker-color-smell-4"></div> 4 It's getting pretty bad</label>
+                        <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-5" value="5" /><label for="checkbox-choice-5"><div class="picker-color-smell-5"></div> 5 About as bad as it gets!</label>
                     </fieldset>
 
                 </div>
