--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
         <link rel="stylesheet" href="css/fullscreen-pages.css" />
         <link rel="stylesheet" href="css/index.css" />
+        <link rel="stylesheet" href="css/pages/home.css" />
         <link rel="stylesheet" href="css/pages/map.css" />
 
         <!-- Libraries -->
