--- a/www/index.html
+++ b/www/index.html
@@ -1,190 +1,155 @@
-
-
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- css -->
+    <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+    <link rel="stylesheet" href="css/fullscreen-pages.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/pages/home.css" />
+    <link rel="stylesheet" href="css/pages/map.css" />
+    <!-- libraries -->
+    <script src="lib/jquery-1.7.1.min.js"></script>
+    <script src="lib/jquery.mobile-1.4.5.min.js"></script>
+    <script src="lib/md5.js"></script>
+    <script src="lib/fastclick.min.js"></script>
+    <script src="cordova.js"></script>
+    <!-- app-related scripts -->
+    <script src="js/constants.js"></script>
+    <script src="js/localstorage.js"></script>
+    <script src="js/globalfunctions.js"></script>
+    <script src="js/location.js"></script>
+    <script src="js/pages/startuppage.js"></script>
+    <script src="js/pages/homepage.js"></script>
+    <script src="js/pages/settingspage.js"></script>
+    <script src="js/app.js"></script>
+  </head>
+  <body>
 
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- css -->
-        <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
-        <link rel="stylesheet" href="css/fullscreen-pages.css" />
-        <link rel="stylesheet" href="css/index.css" />
-        <link rel="stylesheet" href="css/pages/home.css" />
-        <link rel="stylesheet" href="css/pages/map.css" />
+  <div data-role="page" id="home" class="page-fullscreened">
+    <div data-role="header" data-position="fixed" data-tap-toggle="false">
+      <h1>Smell PGH</h1>
+      <a href="#settings" data-icon="gear" class="ui-btn-right">Settings</a>
+    </div>
+    <div role="main" class="ui-content" data-iscroll>
+      <h3>How does your air smell right now?</h3>
+      <fieldset data-role="controlgroup">
+        <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-1" value="1" /><label for="radio-choice-1"><div class="picker-color-smell-1"></div> 1 Just fine!</label>
+        <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-2" value="2" /><label for="radio-choice-2"><div class="picker-color-smell-2"></div> 2 Barely noticeable</label>
+        <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-3" value="3" /><label for="radio-choice-3"><div class="picker-color-smell-3"></div> 3 Definitely noticeable</label>
+        <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-4" value="4" /><label for="radio-choice-4"><div class="picker-color-smell-4"></div> 4 It's getting pretty bad</label>
+        <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-5" value="5" /><label for="radio-choice-5"><div class="picker-color-smell-5"></div> 5 About as bad as it gets!</label>
+      </fieldset>
+      <label for="textfield_smell_description">Describe the smell or source of odor (optional)</label>
+      <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" data-clear-btn="true" />
+      <label for="textfield_feelings_symptoms">Any feelings or symptoms? (optional)</label>
+      <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" data-clear-btn="true" />
+      <div class="text-justified">
+        <i>By pressing submit, this smell report will also be sent to the ACHD Air Quality program. (Unless '1' is selected.) If you wish to receive a reply from them, please go to settings (top right) and provide a response email.</i>
+      </div>
+      <button type="button" id="button_submit_report" disabled>Send Smell Report</button>
+    </div>
+    <div data-role="footer" data-position="fixed" data-id="home_1" data-tap-toggle="false">
+      <div data-role="navbar">
+        <ul>
+          <li><a href="#home" data-icon="home" class="ui-btn-active ui-state-persist" data-transition="none">Smell Report</a></li>
+          <li><a href="#map" data-icon="star" data-transition="none">Map</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-        <!-- Libraries -->
-        <script src="lib/jquery-1.7.1.min.js"></script>
-        <script src="lib/jquery.mobile-1.4.5.min.js"></script>
-        <script src="lib/md5.js"></script>
-        <script src="lib/fastclick.min.js"></script>
-        <script src="cordova.js"></script>
 
-        <!-- app-related scripts -->
-        <script src="js/constants.js"></script>
-        <script src="js/localstorage.js"></script>
-        <script src="js/globalfunctions.js"></script>
-        <script src="js/location.js"></script>
-        <script src="js/pages/startuppage.js"></script>
-        <script src="js/pages/homepage.js"></script>
-        <script src="js/pages/settingspage.js"></script>
-        <script src="js/app.js"></script>
+  <div data-role="page" id="map" class="page-fullscreened">
+    <div data-role="header" data-position="fixed" data-tap-toggle="false">
+      <h1>Smell PGH</h1>
+      <a href="#settings" data-icon="gear" class="ui-btn-right">Settings</a>
+    </div>
+    <div role="main" class="ui-content" id="iframe-map-container" data-iscroll>
+      <iframe id="iframe-map" src="http://localhost/visualization">
+        <p>Your browser does not support iframes.</p>
+      </iframe>
+    </div>
+    <div data-role="footer" data-position="fixed" data-id="map_1" data-tap-toggle="false">
+      <div data-role="navbar">
+        <ul>
+          <li><a href="#home" data-icon="home" data-transition="none">Smell Report</a></li>
+          <li><a href="#map" data-icon="star" class="ui-btn-active ui-state-persist" data-transition="none">Map</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-    </head>
 
-    <body>
-
-        <div data-role="page" id="home" class="page-fullscreened">
-            <div data-role="header" data-position="fixed" data-tap-toggle="false">
-                <h1>Smell PGH</h1>
-                <a href="#settings" data-icon="gear" class="ui-btn-right">Settings</a>
-            </div>
-
-            <div role="main" class="ui-content" data-iscroll>
-                <h3>How does your air smell right now?</h3>
-
-                <fieldset data-role="controlgroup">
-                  <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-1" value="1" /><label for="radio-choice-1"><div class="picker-color-smell-1"></div> 1 Just fine!</label>
-                  <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-2" value="2" /><label for="radio-choice-2"><div class="picker-color-smell-2"></div> 2 Barely noticeable</label>
-                  <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-3" value="3" /><label for="radio-choice-3"><div class="picker-color-smell-3"></div> 3 Definitely noticeable</label>
-                  <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-4" value="4" /><label for="radio-choice-4"><div class="picker-color-smell-4"></div> 4 It's getting pretty bad</label>
-                  <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-5" value="5" /><label for="radio-choice-5"><div class="picker-color-smell-5"></div> 5 About as bad as it gets!</label>
-                </fieldset>
-
-                <label for="textfield_smell_description">Describe the smell or source of odor (optional)</label>
-                <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" data-clear-btn="true" />
-
-                <label for="textfield_feelings_symptoms">Any feelings or symptoms? (optional)</label>
-                <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" data-clear-btn="true" />
-
-                <div class="text-justified"><i>By pressing submit, this smell report will also be sent to the ACHD Air Quality program. (Unless '1' is selected.) If you wish to receive a reply from them, please go to settings (top right) and provide a response email.</i></div>
-
-                <button type="button" id="button_submit_report" disabled>Send Smell Report</button>
-            </div>
-
-            <div data-role="footer" data-position="fixed" data-id="home_1" data-tap-toggle="false">
-                <div data-role="navbar">
-                    <ul>
-                        <li><a href="#home" data-icon="home" class="ui-btn-active ui-state-persist" data-transition="none">Smell Report</a></li>
-                        <li><a href="#map" data-icon="star" data-transition="none">Map</a></li>
-                    </ul>
-                </div>
-            </div>
+  <div data-role="page" id="settings" class="page-fullscreened">
+    <div data-role="header" data-position="fixed" data-tap-toggle="false">
+      <h1>Smell PGH: Settings</h1>
+    </div>
+    <div role="main" class="ui-content">
+      <div id="reportsCollapsible" data-role="collapsible">
+        <h3>Reporting Smells</h3>
+        <label for="textfield_email">Report to ACHD</label>
+        <div>
+          <ul style="list-style-type: none;">
+            <li><input type="text" name="textfield_name" id="textfield_name" placeholder="name" data-clear-btn="true" /></li>
+            <li><input type="text" name="textfield_email" id="textfield_email" placeholder="email" data-clear-btn="true" /></li>
+            <li><input type="number" name="textfield_phone" id="textfield_phone" placeholder="999-999-9999" data-clear-btn="true" /></li>
+          </ul>
         </div>
+      </div>
+      <div id="notificationsCollapsible" data-role="collapsible">
+        <h3>Notifications</h3>
+        <fieldset>
+          <div data-role="fieldcontain">
+            <label for="flip_notification">Enable Notifications</label>
+            <select id="flip_notification" data-role="flipswitch">
+            <option value="off">Off</option>
+            <option value="on">On</option>
+            </select>
+          </div>
+        </fieldset>
+        <label for="checkbox_smell_notifications">Enable Smell Notifications</label>
+        <input type="checkbox" id="checkbox_smell_notifications" />
+        <fieldset data-role="controlgroup" id="checkboxes">
+          <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-1" value="1" /><label for="checkbox-choice-1"><div class="picker-color-smell-1"></div> 1 Just fine!</label>
+          <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-2" value="2" /><label for="checkbox-choice-2"><div class="picker-color-smell-2"></div> 2 Barely noticeable</label>
+          <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-3" value="3" /><label for="checkbox-choice-3"><div class="picker-color-smell-3"></div> 3 Definitely noticeable</label>
+          <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-4" value="4" /><label for="checkbox-choice-4"><div class="picker-color-smell-4"></div> 4 It's getting pretty bad</label>
+          <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-5" value="5" /><label for="checkbox-choice-5"><div class="picker-color-smell-5"></div> 5 About as bad as it gets!</label>
+        </fieldset>
+      </div>
+    </div>
+    <div data-role="footer" data-position="fixed" data-id="settings_1" data-tap-toggle="false">
+      <div data-role="navbar">
+        <ul>
+          <li><a href="#home" data-icon="home" data-transition="none">Smell Report</a></li>
+          <li><a href="#map" data-icon="star" data-transition="none">Map</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-        <div data-role="page" id="map" class="page-fullscreened">
-            <div data-role="header" data-position="fixed" data-tap-toggle="false">
-                <h1>Smell PGH</h1>
-                <a href="#settings" data-icon="gear" class="ui-btn-right">Settings</a>
-            </div>
 
-            <div role="main" class="ui-content" id="iframe-map-container" data-iscroll>
-                <iframe id="iframe-map" src="http://localhost/visualization">
-                    <p>Your browser does not support iframes.</p>
-                </iframe>
-            </div>
+  <div data-role="page" id="startup" class="page-fullscreened">
+    <div data-role="header" data-position="fixed" data-tap-toggle="false">
+      <h1>Smell PGH</h1>
+    </div>
+    <div role="main" class="ui-content">
+      <h3>Welcome to Smell PGH!</h3>
+      <p>Thank you for installing the Smell Pittsburgh mobile app! Along with displaying all smell reports from its users, Smell Pittsburgh automatically submits these reports to the Allegheny County Health Department (ACHD).</p>
+      <p>In order to improve the effectiveness of user reports, please provide your name and email (and optionally a phone number) on the next screen.</p>
+    </div>
+    <div data-role="footer" data-position="fixed" data-id="startup_1" data-tap-toggle="false">
+      <div data-role="navbar">
+        <ul>
+          <li><a href="#settings" id="startup-to-settings" data-icon="carat-r" data-transition="none">Done</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-            <div data-role="footer" data-position="fixed" data-id="map_1" data-tap-toggle="false">
-                <div data-role="navbar">
-                    <ul>
-                        <li><a href="#home" data-icon="home" data-transition="none">Smell Report</a></li>
-                        <li><a href="#map" data-icon="star" class="ui-btn-active ui-state-persist" data-transition="none">Map</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div data-role="page" id="settings" class="page-fullscreened">
-            <div data-role="header" data-position="fixed" data-tap-toggle="false">
-                <h1>Smell PGH: Settings</h1>
-            </div>
-
-            <div role="main" class="ui-content">
-
-                <div id="reportsCollapsible" data-role="collapsible">
-                    <h3>Reporting Smells</h3>
-                    <label for="textfield_email">Report to ACHD</label>
-                    <div>
-                        <ul style="list-style-type: none;">
-                            <li><input type="text" name="textfield_name" id="textfield_name" placeholder="name" data-clear-btn="true" /></li>
-                            <li><input type="text" name="textfield_email" id="textfield_email" placeholder="email" data-clear-btn="true" /></li>
-                            <li><input type="number" name="textfield_phone" id="textfield_phone" placeholder="999-999-9999" data-clear-btn="true" /></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div id="notificationsCollapsible" data-role="collapsible">
-                    <h3>Notifications</h3>
-                    <fieldset>
-                      <div data-role="fieldcontain">
-                        <label for="flip_notification">Enable Notifications</label>
-                        <select id="flip_notification" data-role="flipswitch">
-                          <option value="off">Off</option>
-                          <option value="on">On</option>
-                        </select>
-                      </div>
-                    </fieldset>
-
-                    <label for="checkbox_smell_notifications">Enable Smell Notifications</label>
-                    <input type="checkbox" id="checkbox_smell_notifications" />
-                    <p id="p_slider_info"></p>
-
-                    <fieldset data-role="controlgroup" id="checkboxes">
-                        <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-1" value="1" /><label for="checkbox-choice-1"><div class="picker-color-smell-1"></div> 1 Just fine!</label>
-                        <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-2" value="2" /><label for="checkbox-choice-2"><div class="picker-color-smell-2"></div> 2 Barely noticeable</label>
-                        <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-3" value="3" /><label for="checkbox-choice-3"><div class="picker-color-smell-3"></div> 3 Definitely noticeable</label>
-                        <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-4" value="4" /><label for="checkbox-choice-4"><div class="picker-color-smell-4"></div> 4 It's getting pretty bad</label>
-                        <input type="checkbox" class="checkbox-smell-subscribe" name="checkbox-choice" id="checkbox-choice-5" value="5" /><label for="checkbox-choice-5"><div class="picker-color-smell-5"></div> 5 About as bad as it gets!</label>
-                    </fieldset>
-
-                </div>
-            </div>
-
-            <div data-role="footer" data-position="fixed" data-id="settings_1" data-tap-toggle="false">
-                <div data-role="navbar">
-                    <ul>
-                        <li><a href="#home" data-icon="home" data-transition="none">Smell Report</a></li>
-                        <li><a href="#map" data-icon="star" data-transition="none">Map</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div data-role="page" id="startup" class="page-fullscreened">
-            <div data-role="header" data-position="fixed" data-tap-toggle="false">
-                <h1>Smell PGH</h1>
-            </div>
-
-            <div role="main" class="ui-content">
-                <h3>Welcome to Smell PGH!</h3>
-                <p>
-                    Thank you for installing the Smell Pittsburgh mobile app! Along with displaying all smell reports from its users,
-                    Smell Pittsburgh automatically submits these reports to the Allegheny County Health Department (ACHD).
-                </p>
-                <p>
-                    In order to improve the effectiveness of user reports, please provide your name and email (and optionally a phone number) on the next screen.
-                </p>
-            </div>
-
-            <div data-role="footer" data-position="fixed" data-id="startup_1" data-tap-toggle="false">
-                <div data-role="navbar">
-                    <ul>
-                        <li><a href="#settings" id="startup-to-settings" data-icon="carat-r" data-transition="none">Done</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-<!--         <script src="cordova.js"></script>
-        <script src="js/constants.js"></script>
-        <script src="js/localstorage.js"></script>
-        <script src="js/globalfunctions.js"></script>
-        <script src="js/location.js"></script>
-        <script src="js/pages/homepage.js"></script>
-        <script src="js/pages/settingspage.js"></script>
-        <script src="js/app.js"></script> -->
-
-    </body>
+  </body>
 </html>
