Changed font size for font disclaimer.

--- a/www/index.html
+++ b/www/index.html
@@ -47,8 +47,8 @@
       <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" data-clear-btn="true" />
       <label for="textfield_feelings_symptoms">Any feelings or symptoms? (optional)</label>
       <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" data-clear-btn="true" />
-      <div class="text-justified">
-        <i>By pressing submit, this smell report will also be sent to the ACHD Air Quality program. (Unless '1' is selected.) If you wish to receive a reply from them, please go to settings (top right) and provide a response email.</i>
+      <div class="submission-disclaimer">
+        By pressing submit, this smell report will also be sent to the ACHD Air Quality program. (Unless '1' is selected.) If you wish to receive a reply from them, please go to settings (top right) and provide a response email.
       </div>
       <button type="button" id="button_submit_report" disabled>Send Smell Report</button>
     </div>
