--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
       <label for="textfield_feelings_symptoms">Any feelings or symptoms? (optional)</label>
       <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" data-clear-btn="true" />
       <div class="submission-disclaimer">
-        By pressing submit, this smell report will also be sent to the ACHD Air Quality program. (Unless '1' is selected.) If you wish to receive a reply from them, please go to settings (top right) and provide a response email.
+        All smell reports rated 2 or higher will be sent to the Allegheny County Health Department (ACHD). If you’d like to leave your contact information with ACHD, please enter your details in the settings tab (top right).
       </div>
       <button type="button" id="button_submit_report" disabled>Send Smell Report</button>
     </div>
@@ -91,7 +91,8 @@
     <div role="main" class="ui-content">
       <div id="reportsCollapsible" data-role="collapsible">
         <h3>Reporting Smells</h3>
-        <label for="textfield_email">Report to ACHD</label>
+        <label>ACHD Report</label>
+        <p>Please provide contact information you would like to include in your smell reports to the health department. Signing your name in these reports can improve their authenticity and effectiveness.</p>
         <div>
           <ul style="list-style-type: none;">
             <li><input type="text" name="textfield_name" id="textfield_name" placeholder="name" data-clear-btn="true" /></li>
@@ -139,8 +140,8 @@
     </div>
     <div role="main" class="ui-content">
       <h3>Welcome to Smell PGH!</h3>
-      <p>Thank you for installing the Smell Pittsburgh mobile app! Along with displaying all smell reports from its users, Smell Pittsburgh automatically submits these reports to the Allegheny County Health Department (ACHD).</p>
-      <p>In order to improve the effectiveness of user reports, please provide your name and email (and optionally a phone number) on the next screen.</p>
+      <p>Thank you for installing the Smell PGH App!</p>
+      <p>This app is designed to track pollution odors across the Pittsburgh region. If you detect a foul odor while you’re outside, please report it through this app. Smell PGH will automatically submit these reports to the Allegheny County Health Department (ACHD) so they can take action.</p>
     </div>
     <div data-role="footer" data-position="fixed" data-id="startup_1" data-tap-toggle="false">
       <div data-role="navbar">
