Changes during meeting on Thursday.

--- a/www/index.html
+++ b/www/index.html
@@ -48,11 +48,11 @@
       </div>
       <div class="homepage-section">
         <label for="textfield_smell_description">Describe the smell or source of odor<br/>(e.g. industrial, woodsmoke, rotten eggs, garbage)</label>
-        <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" data-clear-btn="true" />
+        <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" placeholder="e.g. industrial, woodsmoke, rotten eggs, garbage" data-clear-btn="true" />
       </div>
       <div class="homepage-section">
         <label for="textfield_feelings_symptoms">Did you experience any symptoms because of the odor? (e.g. headache, sore throat, eye irritation, etc.)</label>
-        <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" data-clear-btn="true" />
+        <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" placeholder="e.g. headache, sore throat, eye irritation, etc." data-clear-btn="true" />
       </div>
       <div class="homepage-section">
         <label for="textfield_additional_comments">If you would like to include a personal note about your experience in the report to the Allegheny County Health Department (ACHD), please write it below.</label>
@@ -98,12 +98,12 @@
 
   <div data-role="page" id="settings" class="page-fullscreened">
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
-      <h1>Smell PGH: Settings</h1>
+      <h1>Settings</h1>
     </div>
     <div role="main" class="ui-content">
       <div id="reportsCollapsible" data-role="collapsible">
-        <h3>ACHD Report</h3>
-        <label class="settings-description">Please provide contact information you would like to include in your smell reports to the health department. While these fields are completely optional, signing your name in reports to the health department can improve authenticity and effectiveness.</label>
+        <h3>Contact Information</h3>
+        <label class="settings-description">While these fields are optional, signing your name in reports to the health department can improve authenticity and effectiveness.</label>
         <div>
           <input type="text" name="textfield_name" id="textfield_name" placeholder="name" data-clear-btn="true" />
           <input type="text" name="textfield_email" id="textfield_email" placeholder="email" data-clear-btn="true" />
@@ -145,7 +145,8 @@
     <div role="main" class="ui-content">
       <h3>Welcome to Smell PGH!</h3>
       <p>Thank you for installing the Smell PGH App!</p>
-      <p>This app is designed to track pollution odors across the Pittsburgh region. If you detect a foul odor while you’re outside, please report it through this app. Smell PGH will automatically submit these reports to the Allegheny County Health Department (ACHD) so they can take action.</p>
+      <p>This app is designed to track pollution odors across the Pittsburgh region. If you detect a foul odor while you're outside, please report it through this app.</p>
+      <p style="font-weight:bold;">Smell PGH will automatically submit these reports to the Allegheny County Health Department (ACHD) so they can take action.</p>
     </div>
     <div data-role="footer" data-position="fixed" data-id="startup_1" data-tap-toggle="false">
       <div data-role="navbar">
