--- a/www/index.html
+++ b/www/index.html
@@ -82,7 +82,7 @@
 
 
   <div data-role="page" id="map" class="page-fullscreened">
-    <div data-role="panel" id="map-panel" data-display="overlay">>
+    <div data-role="panel" id="map-panel" data-display="overlay">
         <ul data-role="listview" data-inset="true">
             <li><a href="#settings">Settings</a></li>
             <li><a href="#about">About</a></li>
@@ -109,7 +109,7 @@
 
 
   <div data-role="page" id="settings" class="page-fullscreened">
-    <div data-role="panel" id="settings-panel" data-display="overlay">>
+    <div data-role="panel" id="settings-panel" data-display="overlay">
         <ul data-role="listview" data-inset="true">
             <li><a href="#settings" class="ui-btn ui-btn-icon-right ui-icon-carat-r ui-btn-active">Settings</a></li>
             <li><a href="#about">About</a></li>
@@ -178,7 +178,7 @@
 
 
   <div data-role="page" id="about" class="page-fullscreened">
-    <div data-role="panel" id="about-panel" data-display="overlay">>
+    <div data-role="panel" id="about-panel" data-display="overlay">
         <ul data-role="listview" data-inset="true">
             <li><a href="#settings">Settings</a></li>
             <li><a href="#about" class="ui-btn ui-btn-icon-right ui-icon-carat-r ui-btn-active">About</a></li>
