--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/pages/home.css" />
     <link rel="stylesheet" href="css/pages/settings.css" />
     <link rel="stylesheet" href="css/pages/map.css" />
+    <link rel="stylesheet" href="css/pages/about.css" />
     <!-- libraries -->
     <script src="lib/jquery-1.12.4.min.js"></script>
     <script src="lib/jquery.mobile-1.4.5.min.js"></script>
@@ -189,8 +190,21 @@
       <h1>About</h1>
     </div>
     <div role="main" class="ui-content">
-      <h3>This is the about page</h3>
-      <p>Add content here.</p>
+      <h3>About Smell PGH</h3>
+      <p>Pittsburgh was named one of top 15 the most livable cities in the US, but our air quality is often worse than other cities on that list. Foul odors outside are typically symptoms of a serious pollution problem in our region. We, our children, our friends and families all breathe in this air. If our air smells toxic, then we are likely inhaling toxins.</p>
+      <p>Smell PGH was designed to crowdsource smell reports so we can track how pollutants travel through our air across Pittsburgh. All odor complaints submitted through the app go directly to the health department (ACHD) so they can better monitor and act on these complaints.</p>
+      <center class="smell-submit-share">-- Smell -- Submit -- Share --</center>
+      <p>Smell PGH was developed by the CMU CREATE Lab with support from the Heinz Endowments, and in collaboration with:</p>
+      <ul>
+        <li>ACCAN</li>
+        <li>PennEnvironment</li>
+        <li>GASP</li>
+        <li>Sierra Club</li>
+        <li>ROCIS</li>
+      </ul>
+      <div id="about-version-number">
+        version: 1.2.3
+      </div>
     </div>
     <div data-role="footer" data-position="fixed" data-id="settings_1" data-tap-toggle="false">
       <div data-role="navbar">
