--- a/www/index.html
+++ b/www/index.html
@@ -33,10 +33,11 @@
 
   <div data-role="page" id="home" class="page-fullscreened">
     <div data-role="panel" id="home-panel" data-display="overlay">
-        <ul data-role="listview" data-inset="true">
-            <li><a href="#settings">Settings</a></li>
-            <li><a href="#about">About</a></li>
-        </ul>
+      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
+      <ul data-role="listview" data-inset="true" data-icon="false">
+        <li><a href="#settings">Settings</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
     </div>
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <h1>Smell PGH</h1>
@@ -84,10 +85,11 @@
 
   <div data-role="page" id="map" class="page-fullscreened">
     <div data-role="panel" id="map-panel" data-display="overlay">
-        <ul data-role="listview" data-inset="true">
-            <li><a href="#settings">Settings</a></li>
-            <li><a href="#about">About</a></li>
-        </ul>
+      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
+      <ul data-role="listview" data-inset="true" data-icon="false">
+        <li><a href="#settings">Settings</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
     </div>
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <h1>Smell PGH</h1>
@@ -111,10 +113,11 @@
 
   <div data-role="page" id="settings" class="page-fullscreened">
     <div data-role="panel" id="settings-panel" data-display="overlay">
-        <ul data-role="listview" data-inset="true">
-            <li><a href="#settings" class="ui-btn ui-btn-icon-right ui-icon-carat-r ui-btn-active">Settings</a></li>
-            <li><a href="#about">About</a></li>
-        </ul>
+      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
+      <ul data-role="listview" data-inset="true" data-icon="false">
+        <li><a href="#settings" class="ui-btn ui-btn-active">Settings</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
     </div>
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <a href="#settings-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Settings</a>
@@ -173,10 +176,11 @@
 
   <div data-role="page" id="about" class="page-fullscreened">
     <div data-role="panel" id="about-panel" data-display="overlay">
-        <ul data-role="listview" data-inset="true">
-            <li><a href="#settings">Settings</a></li>
-            <li><a href="#about" class="ui-btn ui-btn-icon-right ui-icon-carat-r ui-btn-active">About</a></li>
-        </ul>
+      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
+      <ul data-role="listview" data-inset="true" data-icon="false">
+        <li><a href="#settings">Settings</a></li>
+        <li><a href="#about" class="ui-btn ui-btn-active">About</a></li>
+      </ul>
     </div>
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <a href="#about-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Settings</a>
